# hamburger-ocr

./: CMakeLists.txt  LICENSE  README.md  build.sh
data/: text.txt  translate.py
src/: X11.hpp  main.cpp  ocr.hpp
